<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- opens a subscreen of settings -->

    <CheckBoxPreference
        android:key="@string/temp_pref_key"
        android:id="@+id/tempPref"
        android:title="@string/preferences_temperature"
        android:summary="@string/preferences_temperature_scale"
        android:icon="@drawable/ic_temp"
        android:defaultValue="false"/>

    <com.eim.winder.activities.alertsettings.CustomTempRangePreference
        android:key = "@string/temp_range_key" />

    <CheckBoxPreference
        android:id="@+id/precipPref"
        android:key="@string/precip_pref_key"
        android:title="@string/preferences_precipitation"
        android:summary="@string/preferences_precipitation_amount_period"
        android:icon="@drawable/ic_nedboer"
        android:defaultValue="false"/>

    <com.eim.winder.activities.alertsettings.CustomPrecipRangePreference
        android:key="@string/precip_range_key" />

    <CheckBoxPreference
        android:id="@+id/windSpeedPref"
        android:key="@string/windspeed_pref_key"
        android:title="@string/preferences_windspeed"
        android:summary="@string/preferences_windspeed_description"
        android:icon="@drawable/ic_vind_styrke"
        android:defaultValue="false"/>

    <com.eim.winder.activities.alertsettings.CustomWindSpRangePreference
        android:key="@string/windspeed_range_key" />

    <CheckBoxPreference
        android:id="@+id/windDirPref"
        android:key="@string/winddir_pref_key"
        android:title="@string/preferences_winddir"
        android:icon="@drawable/ic_vindretning"
        android:defaultValue="false"/>

    <MultiSelectListPreference
        android:key="@string/winddir_select_key"
        android:summary="@string/choose_winddirection_string"
        android:entries="@array/windDirection_array"
        android:entryValues="@array/windDirection_values"
        android:defaultValue="@array/empty_array"/>
    <CheckBoxPreference
        android:id="@+id/sunnyPref"
        android:key="@string/sunny_pref_key"
        android:title="@string/preferences_suncheck"
        android:icon="@drawable/ic_sol"
        android:defaultValue="false"/>

    <MultiSelectListPreference
        android:key="@string/weekdays_pref_key"
        android:title="@string/preferences_weekdays_check"
        android:summary="@string/choose_weekdays_string"
        android:entries="@array/weekdays_array"
        android:icon="@drawable/ic_insert_invitation_black_48dp"
        android:entryValues="@array/weekdays_values"
        android:defaultValue="@array/empty_array"
        />
    <ListPreference
        android:key="@string/checkintr_pref_key"
        android:title="@string/preferences_interval"
        android:summary="@string/preferences_interval_description"
        android:entries="@array/checkinterval_array"
        android:entryValues="@array/checkinterval_values"
        android:icon="@drawable/ic_alarm_black"
        android:defaultValue="3"/>

</PreferenceScreen>