<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="alertsettings" type="com.eim.winder.db.AlertSettings"/>
        <variable name="location" type="com.eim.winder.db.Location"/>
    </data>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.alertoverview.AlertOverViewActivity"
    tools:showIn="@layout/activity_alert_over_view"
    android:id="@+id/contentTable">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.GridLayout
            android:id="@+id/preferences_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            app:columnCount="3"
            app:rowCount="7"
            app:orientation="horizontal"
            android:padding="5dp"
            android:visibility="visible">

            <TextView
                app:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnSpan="3"
                app:layout_rowSpan="1"
                android:id="@+id/row1_title"
                android:text="@{location.toString()}"
                android:background="@drawable/table_lines"
                android:padding="5dip"/>
            <LinearLayout
                app:layout_columnWeight="1"
                android:id="@+id/row2_fromTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnSpan="3"
                app:layout_rowSpan="1"
                android:orientation="horizontal"
                android:background="@drawable/table_lines"
                >
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row2_column1"
                android:text=""
                android:gravity="center"
                android:padding="10dip"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row2_column2"
                android:text="@string/from"
                android:padding="10dip"
                android:gravity="center"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row2_column3"
                android:text="@string/to"
                android:gravity="center"
                android:padding="10dip"/>
            </LinearLayout>

            <LinearLayout
                app:layout_columnWeight="1"
                android:id="@+id/row3_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnSpan="3"
                app:layout_rowSpan="1"
                android:orientation="horizontal"
                android:background="@drawable/table_lines"
                >
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row3_column1"
                android:text="@string/temp_interval"
                android:gravity="start"
                android:padding="10dip"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row3_column2"
                android:text='@{""+alertsettings.tempMin+ " C"}'
                android:gravity="center"
                android:padding="10dip"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row3_column3"
                android:text='@{""+alertsettings.tempMax+ " C"}'
                android:gravity="center"
                android:padding="10dip"/>
            </LinearLayout>

            <LinearLayout
                app:layout_columnWeight="1"
                android:id="@+id/row4_precip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnSpan="3"
                app:layout_rowSpan="1"
                android:orientation="horizontal"
                android:background="@drawable/table_lines"
                >

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row4_column1"
                android:text="@string/nedboer_intervall"
                android:gravity="start"
                android:padding="10dip"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row4_column2"
                android:text='@{""+alertsettings.precipitationMin+" mm"}'
                android:gravity="center"
                android:padding="10dip"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row4_column3"
                android:text='@{""+alertsettings.precipitationMax+" mm"}'
                android:gravity="center"
                android:padding="10dip"/>

            </LinearLayout>
            <LinearLayout
                app:layout_columnWeight="1"
                android:id="@+id/row5_wind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnSpan="3"
                app:layout_rowSpan="1"
                android:orientation="horizontal"
                android:background="@drawable/table_lines"
                >
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row5_column1"
                android:text="@string/vind_styrke"
                android:gravity="start"
                android:padding="10dip"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row5_column2"
                android:text='@{""+alertsettings.windSpeedMin+ " m/s"}'
                android:gravity="center"
                android:padding="10dip"
                />

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row5_column3"
                android:text='@{""+alertsettings.windSpeedMax+ " m/s"}'
                android:gravity="center"
                android:padding="10dip"/>
            </LinearLayout>

            <LinearLayout
                app:layout_columnWeight="1"
                android:weightSum="3"
                android:id="@+id/row6_windDir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnSpan="3"
                app:layout_rowSpan="1"
                android:orientation="horizontal"
                android:background="@drawable/table_lines"
                >
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/row6_column1"
                android:text="@string/vind_retning"
                android:gravity="start|center_vertical"
                android:padding="10dip"/>

            <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row6_column2"
                android:text="@{alertsettings.windDirection}"
                android:gravity="center"
                android:padding="10dip" />
            </LinearLayout>

            <LinearLayout
                app:layout_columnWeight="1"
                android:weightSum="3"
                android:id="@+id/row7_sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnSpan="3"
                app:layout_rowSpan="1"
                android:orientation="horizontal"
                android:background="@drawable/table_lines"
                >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/row7_column1"
                android:text="@string/sol_varsel"
                android:gravity="start"
                android:padding="10dip"/>

            <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row7_column2"
                android:text=""
                android:gravity="center"
                android:padding="10dip" />
            </LinearLayout>
            <LinearLayout
                app:layout_columnWeight="1"
                android:layout_width="0dp"
                android:weightSum="3"
                android:layout_height="wrap_content"
                app:layout_columnSpan="3"
                app:layout_rowSpan="1"
                android:orientation="horizontal"
                android:background="@drawable/table_lines"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/weekdays"
                    android:gravity="start|center_vertical"
                    android:padding="10dip"
                    />
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/row8_column2"
                    android:text=""
                    android:gravity="center"
                    android:padding="10dip"/>
            </LinearLayout>

            <LinearLayout
                app:layout_columnWeight="1"
                android:weightSum="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnSpan="3"
                app:layout_rowSpan="1"
                android:orientation="horizontal"
                android:background="@drawable/table_lines"
                >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/row9_column1"
                android:text="@string/sjekk_intervall"
                android:gravity="start"
                android:padding="10dip"/>
            <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/row9_column2"
                android:gravity="center"
                android:padding="10dip"/>
            </LinearLayout>
        </android.support.v7.widget.GridLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>

</layout>